@@ -34,13 +34,15 @@ setup(
         'grokcore.component',
         'zope.app.intid',
         'zope.app.container',
-        'z3c.schema2xml >= 1.0',
         'z3c.objpath',
         'zc.relation >= 1.0',
-        'lxml',
         # for tests
         'zope.app.zcmlfiles',
         'zope.securitypolicy',
         ],
+    extras_require = {
+        'xml':  ['z3c.schema2xml >= 1.0',
+                 'lxml'],
+      },
     entry_points={},
     )
